public interface WayOfDelivery {
    void howToDeliver(Delivery dt);
}
